# wator

./: .gitmodules  CMakeLists.txt  README.md
bld/: CMakeCache.txt  Makefile  cmake_install.cmake  wator
bld/btt/: Makefile  cmake_install.cmake
include/: draw.h  game.h  global.h  ptrmap.h  simulation.h
src/: draw.c  game.c  main.c  ptrmap.c  simulation.c
